(lang dune 2.9)

(name pifotrees)

(generate_opam_files true)

(package
 (name pifotrees)
 (synopsis "Programmable packet scheduling")
 (description
  "Formalizes and extends Sivaraman et. al.'s PIFO Tree model as described in https://arxiv.org/pdf/2211.11659.pdf")
 (authors
  "Anshuman Mohan"
  "Yunhe Liu"
  "Tobias Kappé"
  "Dexter Kozen"
  "Nate Foster")
 (maintainers "Anshuman Mohan")
 (source
  (github cornell-netlab/pifo-trees))
 (depends
  (csv
   (>= 2.4))
  (core_kernel
   (>= v0.15.0))
  (pcap-format
   (>= 0.6.0))
  (hex
   (>= 1.5.0))
  (mmap
   (>= 1.2.0))))
